compiler/ifcc-test-output/tests-testfiles-3_invalid_affectation/gcc-compile.txt
input.c:1:1: warning: return type defaults to ‘int’ [-Wimplicit-int]
    1 | main(){
      | ^~~~
input.c: In function ‘main’:
input.c:2:9: error: invalid suffix "var" on integer constant
    2 |     int 1var = 5;
      |         ^~~~
input.c:2:9: error: expected identifier or ‘(’ before numeric constant

return code: 1
